# Hadhaco

./: .env  .gitattributes  .gitignore  AGENTS.md  DELIVERY.md  DEVOPS.md  DOCKER.md  docker-compose.yml  package-lock.json  package.json  startdev.bat  test.py  test2.py
Backend/: .dockerignore  .env.test  .gitignore  Dockerfile  README.md  VALIDATION_REPORT.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
Backend/.github/workflows/: ci.yml  deploy.yml
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_baseline.py  0002_profiles_fk.py  0003_performance_indexes.py  0004_cms_homepage_extension.py  0005_reservation_system.py  0006_order_status_fix.py  0007_order_status_full.py  0008_add_tracking_url_to_shipments.py  0009_add_max_order_quantity.py  0013_company_config.py  (+47 more)
Backend/app/: main.py
Backend/docker/: Dockerfile  docker-compose.staging.yml  docker-compose.yml
Backend/postman_collection/: hadha_dev_auth_postman_collection.json  hadha_postman_collection.json
Backend/scripts/: check_redis_swr.py  check_sql_order.py  diff_schema.py  dump_orm_ddl.py  explain_analyze.py  explain_analyze_validation.py  fix_sql_idempotency.py  migrate_images.py  performance_measurements.py  phase2_explain_analyze.py  phase2_live_measure.py  phase2_query_count.py  phase2_redis_verify.py  phase3_4_5_verify.py  pool_verify.py  redis_validation.py  render_email_previews.py  run_migration_005.py  run_migration_006.py  run_migration_007.py  setup_k6_accounts.py  verify_cache.py  verify_notification_session_optimization.py
Backend/tests/: conftest.py
(+996 files in other folders)
